[ADD]➕ Django-active-link module

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.4.1
 Django==3.2.5
+django-active-link==0.1.8
 django-ckeditor==6.1.0
+django-environ==0.4.5
 django-js-asset==1.2.2
 django-taggit==1.5.1
 Pillow==8.3.1
